<resources>
    <string name="app_name">Algorithm VA</string>
    <string name="Easy">Easy</string>
    <string name="splash_screen_bottom_text">Algorithm Visualization Analysis</string>
    <string name="demo_txt">Hello world!</string>
    <string name="first_slide_title">Algorithm &amp; Data Structure</string>
    <string name="second_slide_title">Grow Analytical Skill</string>
    <string name="third_slide_title">Analyze Algorithm</string>
    <string name="fourth_slide_title">Visualize Algorithm</string>
    <string name="f_th_slide_title">Well Structured</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="first_slide_desc">Learning algorithms and data structures is essential for anyone interested in computer science or programming. These enable us to solve complex problems efficiently, efficient programs.</string>
    <string name="second_slide_desc">Our Algorithm application is designed with a well-structured approach to optimize your coding experience!.</string>
    <string name="third_slide_desc">Maximize your coding potential with Algorithm Analysis. Optimize your coding skills </string>
    <string name="fourth_slide_desc">Our interactive visualizations will help you understand complex algorithms, step-by-step. Boost your problem-solving abilities with ease.</string>
    <string name="f_th_slide_desc">Boost your analytical skills and improve your coding with our Algorithm VA application. Unlock your full potential!</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create New Account</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account</string>
    <string name="username">Enter username</string>
    <string name="password">Enter Password</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_screen">LETS START YOUR JOURNEY</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="testing">Testing</string>
    <string name="todo">TODO</string>
    <string name="sorting">Sorting</string>
    <string name="selection_sort">Selection Sort</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="marge_sort">Marge Sort</string>
    <string name="medium">Medium</string>
    <string name="algorithm">Algorithm</string>
    <string name="visualization">Visualization</string>
    <string name="analysis">Analysis</string>
    <string name="selection_sort_description">Selection Sort Description</string>
    <string name="selection_sort_dec_1">The selection sort algorithm sorts an array by repeatedly finding the minimum element (considering ascending order) from the unsorted part and putting it at the beginning</string>
    <string name="selection_sort_2">The algorithm maintains two subarrays in a given array\n • The subarray which already sorted \n • The remaining subarray was unsorted</string>
    <string name="arr">arr[] = {64, 25, 12, 22, 11}</string>
    <string name="first_pass">First pass:</string>
    <string name="the">\u2022 For the first position in the sorted array, the whole array is traversed from index 0 to 4 sequentially. The first position where 64 is stored presently, after traversing whole array it is clear that 11 is the lowest value</string>
    <string name="selection_1">1&#160;import java.util.Arrays;</string>
    <string name="selection_2">2&#160;public class SelectionSort{</string>
    <string name="selection_3">3&#160;&#160;public static void sort(int arr[]){</string>
    <string name="selection_4">4&#160;&#160;&#160;int n = arr.length;</string>
    <string name="selection_5">5&#160;&#160;&#160;for(int i=0; i &#60;&#160; n - 1; i++){</string>
    <string name="selection_6">6&#160;&#160;&#160;&#160;int min_idx = i;</string>
    <string name="selection_7">7&#160;&#160;&#160;&#160;for(int j=i+1;&#160;j&#160;&#60;&#160;n;&#160;j++){</string>
    <string name="selection_8">8&#160;&#160;&#160;&#160;&#160;if(arr[ j ] &#60; arr[ min_idx ]){</string>
    <string name="selection_9">9&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;min_idx = j;</string>
    <string name="selection_10">10&#160;&#160;&#160;&#160;&#160;}</string>
    <string name="selection_11">11&#160;&#160;&#160;&#160;}</string>
    <string name="selection_12">12&#160;&#160;&#160;&#160;int temp = arr[ min_idx ];</string>
    <string name="selection_13">13&#160;&#160;&#160;&#160;arr[ min_idx ] = arr[ i ];</string>
    <string name="selection_14">14&#160;&#160;&#160;&#160;arr[ i ] = temp;</string>
    <string name="selection_15">15&#160;&#160;&#160;}</string>
    <string name="selection_16">16&#160;&#160;}</string>
    <string name="selection_17">17&#160;&#160;public static boolean isSorted(int arr[]){</string>
    <string name="selection_18">18&#160;&#160;&#160;int prev = arr[0];</string>
    <string name="selection_19">19&#160;&#160;&#160;for(int i=1; i &#60; arr.length; i++){</string>
    <string name="selection_20">20&#160;&#160;&#160;&#160;if(prev > arr[ i ]){</string>
    <string name="selection_21">21&#160;&#160;&#160;&#160;&#160;System.out.println(&quot;Selection Sort Fails&quot;);</string>
    <string name="selection_22">22&#160;&#160;&#160;&#160;&#160;return false;</string>
    <string name="selection_23">23&#160;&#160;&#160;&#160;}</string>
    <string name="selection_24">24&#160;&#160;&#160;}</string>
    <string name="selection_25">25&#160;&#160;&#160;return true;</string>
    <string name="selection_26">26&#160;&#160;}</string>
    <string name="selection_27">27&#160;&#160;public static void main(String[] args){</string>
    <string name="selection_28">28&#160;&#160;&#160;int[] array = {4, 8, 2, 9, 5}</string>
    <string name="selection_29">29&#160;&#160;&#160;sort(array);</string>
    <string name="selection_30">30&#160;&#160;&#160;if(isSorted(array)){</string>
    <string name="selection_31">31&#160;&#160;&#160;&#160;System.out.println(Arrays.toString(array));</string>
    <string name="selection_32">32&#160;&#160;&#160;}</string>
    <string name="selection_33">33&#160;&#160;}</string>
    <string name="selection_34">34&#160;}</string>
    <string name="program_output">Program Output</string>
    <string name="array_demo">[2, 4, 5, 8, 9]</string>
    <string name="variables">Variables</string>
    <string name="memory">Analyzing View</string>
    <string name="array_name">array</string>
    <string name="_1">1</string>
    <string name="main_section_executed">main: 27</string>
    <string name="sort_method_called">sort: 3</string>
    <string name="isSorted_method_called">isSorted: 17</string>
    <string name="initial_condition">&#160;</string>
    <string name="i">i</string>
    <string name="condition_false">false</string>
    <string name="title_activity_insertion_sort_visualization">Insertion_Sort_Visualization</string>
    <string name="queue_1">1&#160;package StackQueue;</string>
    <string name="queue_2">2&#160;class Queue {</string>
    <string name="queue_3">3&#160;&#160;int front, rear, size;</string>
    <string name="queue_4">4&#160;&#160;int capacity;</string>
    <string name="queue_5">5&#160;&#160;int array[];</string>
    <string name="queue_6">6&#160;&#160;public Queue(int capacity){</string>
    <string name="queue_7">7&#160;&#160;&#160;this.capacity = capacity;</string>
    <string name="queue_8">8&#160;&#160;&#160;front = this.size = 0;</string>
    <string name="queue_9">9&#160;&#160;&#160;rear = capacity - 1;</string>
    <string name="queue_10">10&#160;&#160;&#160;array = new int[this.capacity];</string>
    <string name="queue_11">11&#160;&#160;}</string>
    <string name="queue_12">12&#160;&#160;boolean isFull(Queue queue){</string>
    <string name="queue_13">13&#160;&#160;&#160;return (queue.size == queue.capacity);</string>
    <string name="queue_14">14&#160;&#160;}</string>
    <string name="queue_15">15&#160;&#160;boolean isEmpty(Queue queue){</string>
    <string name="queue_16">16&#160;&#160;&#160;return (queue.size == 0);</string>
    <string name="queue_17">17&#160;&#160;}</string>
    <string name="queue_18">18&#160;&#160;void enqueue(int item){</string>
    <string name="queue_19">19&#160;&#160;&#160;if (isFull(this))</string>
    <string name="queue_20">20&#160;&#160;&#160;&#160;return;</string>
    <string name="queue_21">21&#160;&#160;&#160;this.rear = (this.rear + 1) % this.capacity;</string>
    <string name="queue_22">22&#160;&#160;&#160;this.array[this.rear] = item;</string>
    <string name="queue_23">23&#160;&#160;&#160;this.size = this.size + 1;</string>
    <string name="queue_24">24&#160;&#160;&#160;System.out.println(item + " enqueued to queue");</string>
    <string name="queue_25">25&#160;&#160;}</string>
    <string name="queue_26">26&#160;&#160;int dequeue(){</string>
    <string name="queue_27">27&#160;&#160;&#160;if (isEmpty(this))</string>
    <string name="queue_28">28&#160;&#160;&#160;&#160;return Integer.MIN_VALUE;</string>
    <string name="queue_29">29&#160;&#160;&#160;&#160;</string>
    <string name="queue_30">30&#160;&#160;&#160;int item = this.array[this.front];</string>
    <string name="queue_31">31&#160;&#160;&#160;this.front = (this.front + 1) % this.capacity;</string>
    <string name="queue_32">32&#160;&#160;&#160;this.size = this.size - 1;</string>
    <string name="queue_33">33&#160;&#160;&#160;return item;</string>
    <string name="queue_34">34&#160;&#160;}</string>
    <string name="queue_35">35&#160;&#160;int front(){</string>
    <string name="queue_36">36&#160;&#160;&#160;if (isEmpty(this))</string>
    <string name="queue_37">37&#160;&#160;&#160;&#160;return Integer.MIN_VALUE;</string>
    <string name="queue_38">38&#160;&#160;&#160;&#160;</string>
    <string name="queue_39">39&#160;&#160;&#160;return this.array[this.front];</string>
    <string name="queue_40">40&#160;&#160;}</string>
    <string name="queue_41">41&#160;&#160;int rear(){</string>
    <string name="queue_42">42&#160;&#160;&#160;if (isEmpty(this))</string>
    <string name="queue_43">43&#160;&#160;&#160;&#160;return Integer.MIN_VALUE;</string>
    <string name="queue_44">44&#160;</string>
    <string name="queue_45">45&#160;&#160;&#160;return this.array[this.rear];</string>
    <string name="queue_46">46&#160;&#160;}</string>
    <string name="queue_47">47&#160;}</string>
    <string name="queue_48">48&#160;public class Queue_Algo {</string>
    <string name="queue_49">49&#160;&#160;public static void main(String[] args){</string>
    <string name="queue_50">50&#160;&#160;&#160;Queue queue = new Queue(10);</string>
    <string name="queue_51">51&#160;&#160;&#160;queue.enqueue(10);</string>
    <string name="queue_52">52&#160;&#160;&#160;queue.enqueue(20);</string>
    <string name="queue_53">53&#160;&#160;&#160;queue.enqueue(30);</string>
    <string name="queue_54">54&#160;&#160;&#160;System.out.println(queue.dequeue() + " Dequeued from queue");</string>
    <string name="queue_55">55&#160;&#160;&#160;System.out.println(queue.front()+ " Is the Front item");</string>
    <string name="queue_56">56&#160;&#160;&#160;System.out.println(queue.rear()+ " Is the Rear item");</string>
    <string name="queue_57">57&#160;&#160;}</string>
    <string name="queue_58">58&#160;}</string>
</resources>