<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/strock_border_with_color_background"
    android:layout_margin="8dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/queue_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_1"/>
            <TextView
                android:id="@+id/queue_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_2"/>
            <TextView
                android:id="@+id/queue_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_3"/>
            <TextView
                android:id="@+id/queue_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_4"/>
            <TextView
                android:id="@+id/queue_05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_5"/>
            <TextView
                android:id="@+id/queue_06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_6"/>
            <TextView
                android:id="@+id/queue_07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_7"/>
            <TextView
                android:id="@+id/queue_08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_8"/>
            <TextView
                android:id="@+id/queue_09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_9"/>
            <TextView
                android:id="@+id/queue_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_10"/>
            <TextView
                android:id="@+id/queue_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_11"/>
            <TextView
                android:id="@+id/queue_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_12"/>
            <TextView
                android:id="@+id/queue_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_13"/>
            <TextView
                android:id="@+id/queue_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_14"/>
            <TextView
                android:id="@+id/queue_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_15"/>
            <TextView
                android:id="@+id/queue_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_16"/>
            <TextView
                android:id="@+id/queue_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_17"/>
            <TextView
                android:id="@+id/queue_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_18"/>
            <TextView
                android:id="@+id/queue_19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_19"/>
            <TextView
                android:id="@+id/queue_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_20"/>
            <TextView
                android:id="@+id/queue_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_21"/>
            <TextView
                android:id="@+id/queue_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_22"/>
            <TextView
                android:id="@+id/queue_23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_23"/>
            <TextView
                android:id="@+id/queue_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_24"/>
            <TextView
                android:id="@+id/queue_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_25"/>
            <TextView
                android:id="@+id/queue_26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_26"/>

            <TextView
                android:id="@+id/queue_27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queue_27"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/queue_28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_28"/>
            <TextView
                android:id="@+id/queue_29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_29"/>
            <TextView
                android:id="@+id/queue_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_30"/>
            <TextView
                android:id="@+id/queue_31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_31"/>
            <TextView
                android:id="@+id/queue_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_32"/>
            <TextView
                android:id="@+id/queue_33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_33"/>
            <TextView
                android:id="@+id/queue_34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_34"/>
            <TextView
                android:id="@+id/queue_35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_35"/>
            <TextView
                android:id="@+id/queue_36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_36"/>
            <TextView
                android:id="@+id/queue_37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_37"/>
            <TextView
                android:id="@+id/queue_38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_38"/>
            <TextView
                android:id="@+id/queue_39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_39"/>
            <TextView
                android:id="@+id/queue_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_40"/>
            <TextView
                android:id="@+id/queue_41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_41"/>
            <TextView
                android:id="@+id/queue_42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_42"/>
            <TextView
                android:id="@+id/queue_43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_43"/>
            <TextView
                android:id="@+id/queue_44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_44"/>
            <TextView
                android:id="@+id/queue_45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_45"/>
            <TextView
                android:id="@+id/queue_46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_46"/>
            <TextView
                android:id="@+id/queue_47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_47"/>
            <TextView
                android:id="@+id/queue_48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_48"/>
            <TextView
                android:id="@+id/queue_49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_49"/>
            <TextView
                android:id="@+id/queue_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_50"/>
            <TextView
                android:id="@+id/queue_51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_51"/>
            <TextView
                android:id="@+id/queue_52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_52"/>
            <TextView
                android:id="@+id/queue_53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_53"/>
            <TextView
                android:id="@+id/queue_54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_54"/>
            <TextView
                android:id="@+id/queue_55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_55"/>
            <TextView
                android:id="@+id/queue_56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_56"/>
            <TextView
                android:id="@+id/queue_57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_57"/>
            <TextView
                android:id="@+id/queue_58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/queue_58"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>